# vcstream

./: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  NOTICE
apps/cameraprobe/: CMakeLists.txt  main.cpp
apps/fontprobe/: CMakeLists.txt  main.cpp
apps/unittests/: CMakeLists.txt
apps/unittests/app/defence/: CMakeLists.txt  tst_crashguard.cpp
apps/unittests/app/lifecycle/: CMakeLists.txt  tst_appsupervisor.cpp
apps/unittests/devices/capture/: CMakeLists.txt  tst_mediacapture.cpp
apps/unittests/devices/catalogue/: CMakeLists.txt  tst_devicememorycache.cpp
apps/unittests/helpers/: test_random.h
apps/unittests/qml/: CMakeLists.txt  tst_qml_ui.cpp
apps/unittests/style/: CMakeLists.txt  tst_style.cpp
apps/unittests/ui/colour/: CMakeLists.txt  tst_oklchcolour.cpp
apps/unittests/ui/fonts/: CMakeLists.txt  tst_fontpreviewsafetycache.cpp
apps/unittests/ui/geometry/: CMakeLists.txt  tst_windowrectfitter.cpp
apps/vcstream/: CMakeLists.txt  main.cpp
apps/vcstream/qml/: HelpTip.qml  LandingPage.qml  PreferencesOverlay.qml  SchedulingOverlay.qml  ShellPage.qml  SupportOverlay.qml  VcButton.qml  VcCheckBox.qml  VcCloseButton.qml  VcComboBox.qml  VcFlickScrollBar.qml  VcFontPicker.qml  VcPanel.qml  VcScrollBar.qml  VcSlider.qml  VcTabBar.qml  VcTabButton.qml  VcTextField.qml  VcToolButton.qml  VcUtilityActions.qml  main.qml  qml.qrc
docs/: BUILD.md  CODE-QT6.md  DD-TEMPLATE.txt  HISTORY.md  INTERNAL-TOOLS.md  MODULES.md  OVERVIEW.md  ROADMAP.md  SETTINGS.md  STYLE.md
docs/adr/: 0001-transport-and-protocol.md  0002-trust-model.md  0003-rendezvous-and-nat-traversal-scope.md  0004-reliable-control-layer.md
modules/: CMakeLists.txt
modules/app/defence/: CMakeLists.txt  crashguard-dd.txt  crashguard.cpp  crashguard.h
modules/app/devices/: CMakeLists.txt  localdevicecatalogue-dd.txt  localdevicecatalogue.cpp  localdevicecatalogue.h
modules/app/lifecycle/: CMakeLists.txt  appsupervisor-dd.txt  appsupervisor.cpp  appsupervisor.h
modules/app/platform/: CMakeLists.txt  qtshims-dd.txt  qtshims.cpp  qtshims.h
modules/app/settings/: CMakeLists.txt  apppreferences-dd.txt  apppreferences.cpp  apppreferences.h
modules/devices/capture/: CMakeLists.txt  camerabackend-dd.txt  camerabackend.h  camerapreviewhandle-dd.txt  camerapreviewhandle.cpp  camerapreviewhandle.h  camerastreambackend-dd.txt  camerastreambackend.h  dshowcamerabackend-dd.txt  dshowcamerabackend-other.cpp  dshowcamerabackend-win32.cpp  dshowcamerabackend.h  mediacapture-dd.txt  mediacapture.cpp  mediacapture.h  nullcamerabackend-dd.txt  nullcamerabackend.cpp  nullcamerabackend.h  qtcamerabackend-dd.txt  qtcamerabackend.cpp  qtcamerabackend.h  routingcamerabackend-dd.txt  routingcamerabackend.cpp  routingcamerabackend.h
modules/devices/catalogue/: CMakeLists.txt  devicememorycache-dd.txt  devicememorycache.cpp  devicememorycache.h  fakedevicenamegenerator-dd.txt  fakedevicenamegenerator.cpp  fakedevicenamegenerator.h  localdevicecatalogue-dd.txt  localdevicecatalogue.cpp  localdevicecatalogue.h  windowcapturewatcher-dd.txt  windowcapturewatcher.cpp  windowcapturewatcher.h
modules/platform/shim/: CMakeLists.txt  dshowcameraenum-dd.txt  dshowcameraenum-other.cpp  dshowcameraenum-win32.cpp  dshowcameraenum.h  qtmultimediarescan-dd.txt  qtmultimediarescan-linux.cpp  qtmultimediarescan-other.cpp  qtmultimediarescan.h  qtstartupshim-dd.txt  qtstartupshim-other.cpp  qtstartupshim-win32.cpp  qtstartupshim.h
modules/ui/colour/: CMakeLists.txt  oklchcolour-dd.txt  oklchcolour.cpp  oklchcolour.h  oklchutil-dd.txt  oklchutil.cpp  oklchutil.h
modules/ui/fonts/: CMakeLists.txt  bundledfonts.cpp  bundledfonts.h  bundledfonts.qrc  fontpreviewsafetycache-dd.txt  fontpreviewsafetycache.cpp  fontpreviewsafetycache.h  fontpreviewsafetychecker-dd.txt  fontpreviewsafetychecker.cpp  fontpreviewsafetychecker.h  fontpreviewsafetycheckerdefault-dd.txt  fontpreviewsafetycheckerdefault.cpp  fontpreviewsafetycheckerdefault.h
modules/ui/geometry/: CMakeLists.txt  windowrectfitter-dd.txt  windowrectfitter.cpp  windowrectfitter.h
modules/ui/placement/: CMakeLists.txt  windowplacement-dd.txt  windowplacement.cpp  windowplacement.h
modules/ui/theme/: CMakeLists.txt  accentimageprovider-dd.txt  accentimageprovider.cpp  accentimageprovider.h  themeiconimageprovider-dd.txt  themeiconimageprovider.cpp  themeiconimageprovider.h
modules/ui/video/: CMakeLists.txt  vcvideopaintitem-dd.txt  vcvideopaintitem.cpp  vcvideopaintitem.h
