add_subdirectory( app/settings )
add_subdirectory( app/lifecycle )
add_subdirectory( app/defence )
add_subdirectory( platform/shim )
add_subdirectory( devices/catalogue )
add_subdirectory( devices/capture )
add_subdirectory( ui/geometry )
add_subdirectory( ui/placement )
add_subdirectory( ui/colour )
add_subdirectory( ui/theme )
add_subdirectory( ui/fonts )
